# Course-Work

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  FEATURES.md  FINAL_COMPLETE.md  FINAL_FIXED.md  FINAL_LAUNCH.md  FINAL_READABLE.md  INSTALL.md  LAUNCH.md  QUICK_START.md  README.md  SUMMARY.md  build.sh  docker-compose.yml  docker-run.sh  Договор Прокат Всего  2020 — копия.doc  Договор Прокат Всего  2025.docx
include/: AdminAuthDialog.h  AdminGuard.h  AdminPasswordManager.h  AdminSession.h  AuditLogDialog.h  AuditLogger.h  customer.h  customerdialog.h  database.h  equipment.h  equipmentdialog.h  mainwindow.h  rental.h  rentaldialog.h  rentalmanager.h  security.h
resources/: resources.qrc
resources/styles/: dark.qss  light.qss  main.qss
src/: AdminAuthDialog.cpp  AdminGuard.cpp  AdminPasswordManager.cpp  AdminSession.cpp  AuditLogDialog.cpp  AuditLogger.cpp  customer.cpp  customerdialog.cpp  database.cpp  equipment.cpp  equipmentdialog.cpp  main.cpp  mainwindow.cpp  rental.cpp  rentaldialog.cpp  rentalmanager.cpp  security.cpp
ui/: customerform.ui  equipmentform.ui  rentalform.ui
